UI card overflow fixed

--- a/src/components/Dashboard.css
+++ b/src/components/Dashboard.css
@@ -11,10 +11,10 @@ main{
     padding: 20px;
 }
 .sidebar{
+    display: inline-block;
     background: #1e1b4b;
     color: #fff;
     min-height: 100dvh;
-    width: 200px;
     transition: all 0.5s;
 }
 .top_section{
